--- a/Example.ipynb
+++ b/Example.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Jaime\\anaconda3\\envs\\TFMenv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from AudioClass import Audio\n",
     "from TranscriptionFunctions import transcribe_audio_slf, transcribe_audio_clf\n",
@@ -22,12 +13,12 @@
     "youtube_url = \"https://www.youtube.com/watch?v=jNQXAC9IVRw\"\n",
     "\n",
     "#Creamos el objeto de la clase Audio\n",
-    "ytaudio = Audio(folder_name=\"test\", url=youtube_url)"
+    "ytaudio = Audio(folder_name=\"test2\", url=youtube_url)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,19 +28,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "ename": "Exception",
-     "evalue": "Audio file not downloaded",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#Transcribimos el audio\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[43mtranscribe_audio_clf\u001b[49m\u001b[43m(\u001b[49m\u001b[43mytaudio\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\Users\\Jaime\\OneDrive\\Escritorio\\TFM_UCM\\TranscriptionFunctions.py:68\u001b[0m, in \u001b[0;36mtranscribe_audio_clf\u001b[1;34m(ytaudio)\u001b[0m\n\u001b[0;32m     65\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mtranscribe_audio_clf\u001b[39m(ytaudio : Audio) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mstr\u001b[39m:\n\u001b[0;32m     67\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m ytaudio\u001b[38;5;241m.\u001b[39mdownloaded:\n\u001b[1;32m---> 68\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAudio file not downloaded\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     70\u001b[0m     model, processor, device, torch_dtype \u001b[38;5;241m=\u001b[39m get_model()\n\u001b[0;32m     72\u001b[0m     pipe \u001b[38;5;241m=\u001b[39m pipeline(\n\u001b[0;32m     73\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mautomatic-speech-recognition\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m     74\u001b[0m         model\u001b[38;5;241m=\u001b[39mmodel,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     82\u001b[0m         return_timestamps\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[0;32m     83\u001b[0m     )\n",
-      "\u001b[1;31mException\u001b[0m: Audio file not downloaded"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Jaime\\anaconda3\\envs\\TFMenv\\Lib\\site-packages\\transformers\\models\\whisper\\generation_whisper.py:483: FutureWarning: The input name `inputs` is deprecated. Please make sure to use `input_features` instead.\n",
+      "  warnings.warn(\n",
+      "Due to a bug fix in https://github.com/huggingface/transformers/pull/28687 transcription using a multilingual Whisper will default to language detection followed by transcription instead of translation to English.This might be a breaking change for your use case. If you want to instead always translate your audio to English, make sure to pass `language='en'`.\n",
+      "Passing a tuple of `past_key_values` is deprecated and will be removed in Transformers v4.43.0. You should pass an instance of `EncoderDecoderCache` instead, e.g. `past_key_values=EncoderDecoderCache.from_legacy_cache(past_key_values)`.\n",
+      "The attention mask is not set and cannot be inferred from input because pad token is same as eos token.As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.\n"
      ]
     }
    ],
@@ -57,6 +47,35 @@
     "#Transcribimos el audio\n",
     "#Hay que instalar ffmpeg para que funcione Whisper\n",
     "transcribe_audio_clf(ytaudio)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del ytaudio #Si se borrara el objeto no se borra la carpeta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "{'text': \" All Right so here we are in front of the elephants. The Cool thing about this is the really really, REALLY long front and that's cool. And thats pretty Much all i Have to say.\", 'chunks': [{'timestamp': (0.0, 4.0), 'text': ' All Right so here we are in front of the elephants.'}, {'timestamp': (4.0, 14.0), 'text': \" The Cool thing about this is the really really, REALLY long front and that's cool.\"}, {'timestamp': (14.0, 19.0), 'text': ' And thats pretty Much all i Have to say.'}]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "ytaudio = Audio(folder_name=\"test2\", url=youtube_url) #Creamos el objeto de la clase Audio en la carpeta anterior y misma url\n",
+    "print(ytaudio.downloaded) #Recuperamos la descarga y la transcripción\n",
+    "print(ytaudio.transcription)"
    ]
   }
  ],
