pipeline whisper de gabri

--- a/Example.ipynb
+++ b/Example.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "from AudioClass import Audio\n",
-    "from TranscriptionFunctions import transcribe_audio_slf, transcribe_audio_clf\n",
+    "from TranscriptionFunctions import transcribe_audio\n",
     "from DownloadFunctions import download_audio\n",
     "\n",
     "youtube_url = \"https://www.youtube.com/watch?v=jNQXAC9IVRw\"\n",
@@ -46,7 +46,7 @@
    "source": [
     "#Transcribimos el audio\n",
     "#Hay que instalar ffmpeg para que funcione Whisper\n",
-    "transcribe_audio_clf(ytaudio)"
+    "transcribe_audio(ytaudio)"
    ]
   },
   {
