--- a/eduardo/evaluacion/eval_retriever.ipynb
+++ b/eduardo/evaluacion/eval_retriever.ipynb
@@ -40,7 +40,7 @@
     "import os\n",
     "import openai\n",
     "\n",
-    "os.environ[\"OPENAI_API_KEY\"] = \"sk-3FZTo5iM5Ch0w4yOjE8-zq4NHGmIR7MWTUCd0MIXuKT3BlbkFJ3b28Vv3B6YNmg_7BK1fkAld1Mw9cuvnis6LdzXYsMA\"\n",
+    "os.environ[\"OPENAI_API_KEY\"] = \"TU KEY\"\n",
     "# openai.api_key = os.environ[\"OPENAI_API_KEY\"]"
    ]
   },
