--- a/RAG-LLM/local_llama_test.ipynb
+++ b/RAG-LLM/local_llama_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -39,14 +39,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\gmsol\\anaconda3\\envs\\DeepLearningGPU\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "c:\\Users\\gmsol\\anaconda3\\envs\\tfm_integracion\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
        "'llama3.1'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,14 +120,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\gmsol\\anaconda3\\envs\\DeepLearningGPU\\lib\\site-packages\\transformers\\models\\bert\\modeling_bert.py:439: UserWarning: 1Torch was not compiled with flash attention. (Triggered internally at ..\\aten\\src\\ATen\\native\\transformers\\cuda\\sdp_utils.cpp:455.)\n",
+      "c:\\Users\\gmsol\\anaconda3\\envs\\tfm_integracion\\lib\\site-packages\\transformers\\models\\bert\\modeling_bert.py:439: UserWarning: 1Torch was not compiled with flash attention. (Triggered internally at ..\\aten\\src\\ATen\\native\\transformers\\cuda\\sdp_utils.cpp:455.)\n",
       "  attn_output = torch.nn.functional.scaled_dot_product_attention(\n"
      ]
     }
@@ -143,19 +143,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "El Sol probablemente seguiría siendo la campeón en este enfrentamiento, debido a su enorme tamaño y masa. La esfera de leones tendría un radio de unos 400 km, lo que haría que sea insignificante en comparación con el radio del Sol, que es de 700.000 kilómetros. Además, la energía necesaria para destruir el Sol sería extremadamente alta y difícil de alcanzar incluso con tecnología avanzada.\n"
+      "La situación es más compleja de lo que parece al principio. Si los leones formaran una cadena y la población se mantuviera estable en cada generación, tendrían que pasar más de 10 billones de generaciones para alcanzar el trillón de leoncitos, unos 100 billones de años. Sin embargo, el Sol ya se apagará en unos 5.000 millones de años.\n",
+      "\n",
+      "Pero, si los leones lograran comprimirse hasta formar un agujero negro y este se instalara en el interior del Sol, podrían vencer al Sol en unos 2.500 millones de años. Además, incluso si el agujero negro no fuera capaz de detener directamente al Sol, tendría una vida útil de aproximadamente 10 sextillones de años, lo que significa que podría seguir \"viviendo\" mucho después del final del Sol.\n",
+      "\n",
+      "Por tanto, en ambas escenarios los leones ganarían.\n"
      ]
     }
    ],
    "source": [
-    "question = \"quien ganaria, leones o el sol?\"\n",
+    "question = \"quien ganaria, leones o el sol? justifica tu respuesta\"\n",
+    "prompt =f'''Tienes acceso a transcripciones de videos de youtube.\n",
+    "            Se te hará una pregunta y debes responder basándote exclusivamente en la información proporcionada en las transcripciones. Si no puedes responder la pregunta utilizando estos datos, indica que la información no está disponible.\n",
+    "\n",
+    "            Responde de manera educada, estructurada y concisa cuando corresponda. Si la pregunta requiere una respuesta breve, sé claro y directo. Asegúrate de:\n",
+    "\n",
+    "            No inventar información adicional ni suponer nada que no esté claramente expresado en las transcripciones.\n",
+    "            Responder solo utilizando la información proporcionada, sin hacer inferencias más allá del contenido.\n",
+    "            Estructurar la respuesta de manera clara y fácil de entender.\n",
+    "            Mantener un tono respetuoso y profesional en todo momento.\n",
+    "            \n",
+    "            PREGUNTA:\n",
+    "            {question}\n",
+    "            '''\n",
     "response = query_engine.query(question)\n",
     "print(response)\n",
     "# Se realizarán obras para mejorar y ampliar las infraestructuras hidráulicas en determinados municipios de las Illes Balears, incluyendo la mejora del tratamiento EDAR de Sant Lluís.\n"
@@ -163,16 +180,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Regular la temperatura corporal es un ritmo muy importante para los seres vivos. Algo que ayuda a sentirse bien es establecer hábitos regulares, incluyendo acostarse y despertar a las mismas horas cada día. Esto puede ayudar a mejorar la calidad del sueño y sentirse más descansado.'"
+       "'La conclusión es clara: el Sol ganaría sin problema. La energía necesaria para destruirlo es extremadamente alta y actualmente no existe tecnología ni recursos disponibles para lograr tal objetivo, incluso en un escenario hipotético donde los leones se lanzan a una velocidad cercana a la velocidad de la luz.'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,27 +201,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'24d19ffb-baf6-4e51-bc69-076b0882e3a8': {'file_path': 'C:\\\\Users\\\\gmsol\\\\Desktop\\\\videodescargas\\\\transcripciones\\\\Cómo Podría 1 Trillón de Leones Ganarle al Sol NRAbqNtUgdUm4a.txt',\n",
+       "{'9fb38f49-1a4b-4c3a-bf16-2399cf8fab26': {'file_path': 'C:\\\\Users\\\\gmsol\\\\Desktop\\\\videodescargas\\\\transcripciones\\\\Cómo Podría 1 Trillón de Leones Ganarle al Sol NRAbqNtUgdUm4a.txt',\n",
        "  'file_name': 'Cómo Podría 1 Trillón de Leones Ganarle al Sol NRAbqNtUgdUm4a.txt',\n",
        "  'file_type': 'text/plain',\n",
        "  'file_size': 11994,\n",
-       "  'creation_date': '2024-08-24',\n",
-       "  'last_modified_date': '2024-08-24'},\n",
-       " '7c0691f5-b9b0-4247-b72b-20e64deab96b': {'file_path': 'C:\\\\Users\\\\gmsol\\\\Desktop\\\\videodescargas\\\\transcripciones\\\\Cómo Podría 1 Trillón de Leones Ganarle al Sol NRAbqNtUgdUm4a.txt',\n",
+       "  'creation_date': '2024-08-31',\n",
+       "  'last_modified_date': '2024-08-31'},\n",
+       " 'e03e4da0-ed90-4013-be96-fc32f8deb317': {'file_path': 'C:\\\\Users\\\\gmsol\\\\Desktop\\\\videodescargas\\\\transcripciones\\\\Cómo Podría 1 Trillón de Leones Ganarle al Sol NRAbqNtUgdUm4a.txt',\n",
        "  'file_name': 'Cómo Podría 1 Trillón de Leones Ganarle al Sol NRAbqNtUgdUm4a.txt',\n",
        "  'file_type': 'text/plain',\n",
        "  'file_size': 11994,\n",
-       "  'creation_date': '2024-08-24',\n",
-       "  'last_modified_date': '2024-08-24'}}"
+       "  'creation_date': '2024-08-31',\n",
+       "  'last_modified_date': '2024-08-31'}}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
