Cambios de nombres de ficheros

--- a/RAG-LLM/local_llama_base.ipynb
+++ b/RAG-LLM/local_llama_base.ipynb
@@ -52,23 +52,11 @@
     }
    ],
    "source": [
-    "#!/usr/bin/env python3\n",
-    "# -*- coding: utf-8 -*-\n",
-    "\"\"\"\n",
-    "Created on Fri Aug  9 12:10:23 2024\n",
-    "\n",
-    "@author: eduardocarreroyubero\n",
-    "\"\"\"\n",
-    "\n",
-    "# !pip install llama-index\n",
-    "# !pip install llama-index-embeddings-huggingface\n",
-    "# !pip install llama-index-llms-ollama\n",
     "\n",
     "from llama_index.core import VectorStoreIndex, SimpleDirectoryReader, Settings\n",
     "from llama_index.embeddings.huggingface import HuggingFaceEmbedding\n",
     "from llama_index.llms.ollama import Ollama\n",
     "\n",
-    "api_key = \"PONER LA TUYA\"\n",
     "\n",
     "documents = SimpleDirectoryReader(\"C:/Users/gmsol/Desktop/videodescargas/transcripciones\").load_data()\n",
     "\n",
@@ -77,7 +65,7 @@
     "\n",
     "# ollama\n",
     "# importante: installar ollama y levantar el modelo que quieras usar por linea de comandos (https://github.com/ollama/ollama?tab=readme-ov-file)\n",
-    "Settings.llm = Ollama(model=\"llama3.1\", request_timeout=360.0, device_map=device)\n",
+    "Settings.llm = Ollama(model=\"llama3.1\", request_timeout=360.0, device_map=device, temperature=0.1)\n",
     "# Settings.llm.to(device)"
    ]
   },
@@ -143,23 +131,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "La situación es más compleja de lo que parece al principio. Si los leones formaran una cadena y la población se mantuviera estable en cada generación, tendrían que pasar más de 10 billones de generaciones para alcanzar el trillón de leoncitos, unos 100 billones de años. Sin embargo, el Sol ya se apagará en unos 5.000 millones de años.\n",
-      "\n",
-      "Pero, si los leones lograran comprimirse hasta formar un agujero negro y este se instalara en el interior del Sol, podrían vencer al Sol en unos 2.500 millones de años. Además, incluso si el agujero negro no fuera capaz de detener directamente al Sol, tendría una vida útil de aproximadamente 10 sextillones de años, lo que significa que podría seguir \"viviendo\" mucho después del final del Sol.\n",
-      "\n",
-      "Por tanto, en ambas escenarios los leones ganarían.\n"
+      "Debido a la diferencia en energía y masa entre el Sol y un trillón de leones, es imposible que los leones puedan ganar una batalla contra el Sol. El Sol tiene una energía gravitatoria de unos 200.000 sextillones de julios, lo que significa que necesitarían transferirle esa cantidad de energía para destruirlo. Sin embargo, un trillón de leones con 200 trillones de kilos de masa no podría alcanzar una velocidad de aproximadamente el 99,999996% de la velocidad de la luz en el vacío, lo que sería necesario para transferir esa cantidad de energía al Sol. Por lo tanto, el resultado es inevitable: el Sol sería el ganador de esta batalla.\n"
      ]
     }
    ],
    "source": [
-    "question = \"quien ganaria, leones o el sol? justifica tu respuesta\"\n",
+    "question = \"Quien ganaria, los leones o el sol? Justifica tu respuesta.\"\n",
     "prompt =f'''Tienes acceso a transcripciones de videos de youtube.\n",
     "            Se te hará una pregunta y debes responder basándote exclusivamente en la información proporcionada en las transcripciones. Si no puedes responder la pregunta utilizando estos datos, indica que la información no está disponible.\n",
     "\n",
@@ -186,7 +170,7 @@
     {
      "data": {
       "text/plain": [
-       "'La conclusión es clara: el Sol ganaría sin problema. La energía necesaria para destruirlo es extremadamente alta y actualmente no existe tecnología ni recursos disponibles para lograr tal objetivo, incluso en un escenario hipotético donde los leones se lanzan a una velocidad cercana a la velocidad de la luz.'"
+       "'La pelea entre los leones y el Sol es desproporcionada. El Sol tiene una energía gravitatoria de unos 200.000 sextillones de julios, mientras que la energía total de un trillón de leones, incluso si se lanzan a una velocidad cercana a la velocidad de la luz, no sería suficiente para destruirlo. Además, el Sol es una bola con un radio de 700.000 kilómetros y una masa de 2 quintillones de kilos, lo que hace que los leones sean insignificantes en comparación. Por tanto, es probable que el Sol ganara la pelea.'"
       ]
      },
      "execution_count": 8,
@@ -207,18 +191,16 @@
     {
      "data": {
       "text/plain": [
-       "{'9fb38f49-1a4b-4c3a-bf16-2399cf8fab26': {'file_path': 'C:\\\\Users\\\\gmsol\\\\Desktop\\\\videodescargas\\\\transcripciones\\\\Cómo Podría 1 Trillón de Leones Ganarle al Sol NRAbqNtUgdUm4a.txt',\n",
-       "  'file_name': 'Cómo Podría 1 Trillón de Leones Ganarle al Sol NRAbqNtUgdUm4a.txt',\n",
-       "  'file_type': 'text/plain',\n",
+       "{'373ca2ab-526c-44af-8e30-2b2a6dd97968': {'file_path': 'C:\\\\Users\\\\gmsol\\\\Desktop\\\\videodescargas\\\\transcripciones\\\\CmoPodra1TrillndeLeonesGanarlealSoltxt',\n",
+       "  'file_name': 'CmoPodra1TrillndeLeonesGanarlealSoltxt',\n",
        "  'file_size': 11994,\n",
-       "  'creation_date': '2024-08-31',\n",
-       "  'last_modified_date': '2024-08-31'},\n",
-       " 'e03e4da0-ed90-4013-be96-fc32f8deb317': {'file_path': 'C:\\\\Users\\\\gmsol\\\\Desktop\\\\videodescargas\\\\transcripciones\\\\Cómo Podría 1 Trillón de Leones Ganarle al Sol NRAbqNtUgdUm4a.txt',\n",
-       "  'file_name': 'Cómo Podría 1 Trillón de Leones Ganarle al Sol NRAbqNtUgdUm4a.txt',\n",
-       "  'file_type': 'text/plain',\n",
+       "  'creation_date': '2024-09-13',\n",
+       "  'last_modified_date': '2024-09-13'},\n",
+       " '7f151723-7aae-44c8-b332-9b25419f0d66': {'file_path': 'C:\\\\Users\\\\gmsol\\\\Desktop\\\\videodescargas\\\\transcripciones\\\\CmoPodra1TrillndeLeonesGanarlealSoltxt',\n",
+       "  'file_name': 'CmoPodra1TrillndeLeonesGanarlealSoltxt',\n",
        "  'file_size': 11994,\n",
-       "  'creation_date': '2024-08-31',\n",
-       "  'last_modified_date': '2024-08-31'}}"
+       "  'creation_date': '2024-09-13',\n",
+       "  'last_modified_date': '2024-09-13'}}"
       ]
      },
      "execution_count": 9,
