--- a/RAG-LLM/local_llama_test_query_tool.ipynb
+++ b/RAG-LLM/local_llama_test_query_tool.ipynb
@@ -72,9 +72,6 @@
    "source": [
     "\n",
     "\n",
-    "\n",
-    "# documents = SimpleDirectoryReader(directory_path).load_data()\n",
-    "\n",
     "# bge-base embedding model\n",
     "Settings.embed_model = HuggingFaceEmbedding(model_name=\"BAAI/bge-base-en-v1.5\")\n",
     "\n",
@@ -82,15 +79,6 @@
     "# importante: installar ollama y levantar el modelo que quieras usar por linea de comandos (https://github.com/ollama/ollama?tab=readme-ov-file)\n",
     "Settings.llm = Ollama(model=\"llama3.1\", request_timeout=360.0, device_map=device, temperature=0.1)\n",
     "# Settings.llm.to(device)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# print(f\"Loaded {len(documents)} docs\")"
    ]
   },
   {
@@ -130,27 +118,6 @@
     "# Obtener una lista con los nombres de los ficheros en el directorio \"transcripciones\"\n",
     "file_list = os.listdir(directory_path)\n",
     "print(file_list)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CmoGanarCualquierDiscusinFerMirallestxt\n",
-      "CmoPodra1TrillndeLeonesGanarlealSoltxt\n",
-      "Intel5000ExtremeTechUpgradetxt\n",
-      "UnaClaseconelDrdelSueotxt\n"
-     ]
-    }
-   ],
-   "source": [
-    "for archivo in os.listdir(directory_path):\n",
-    "    print(archivo)"
    ]
   },
   {
@@ -222,68 +189,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# # Ejemplo de uso\n",
-    "# question = \"¿Qué hacer para dormir mejor?\"\n",
-    "# response = router_qe.query(question)\n",
-    "# print(response)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<llama_index.core.tools.query_engine.QueryEngineTool at 0x1d348480520>,\n",
-       " <llama_index.core.tools.query_engine.QueryEngineTool at 0x1d352937310>,\n",
-       " <llama_index.core.tools.query_engine.QueryEngineTool at 0x1d3528e0280>,\n",
-       " <llama_index.core.tools.query_engine.QueryEngineTool at 0x1d352935900>]"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "query_engine_tools"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# question = \"¿qué se va a hacer para ampliar el tratamiento EDAR de Baleares?\"\n",
-    "\n",
-    "# response1 = router_qe.query(question)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# vector_index = VectorStoreIndex.from_documents(\n",
-    "#     documents,\n",
-    "# )\n",
-    "\n",
-    "# query_engine = vector_index.as_query_engine(llm=Settings.llm)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 40,
    "metadata": {},
    "outputs": [],
@@ -295,19 +200,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "El Sol es una bola con un radio de 700.000 kilómetros y una masa de 2 quintillones de kilos. Un trillón de leones formaría una esfera con un radio de unos 400 km, lo que sería insignificante en comparación con el tamaño del Sol. Además, para destruir al Sol se necesitaría transferirle una energía mayor que la energía gravitatoria que lo mantiene ligado, lo que equivaldría a un zambombazo tremendo de unos 200.000 sextillones de julios. Sin embargo, incluso si se lanzara la esfera de leones a una velocidad cercana al 99,999996% de la velocidad de la luz, no sería suficiente para destruir el Sol. Por lo tanto, en esta situación hipotética, el Sol ganaría.\n"
+      "El Sol es una bola con un radio de 700.000 kilómetros y una masa de 2 quintillones de kilos, mientras que un trillón de leones formaría una esfera con un radio de unos 400 km y un peso de 200 trillones de kilos. A pesar del tamaño considerable de la bola de leones, su energía sería insuficiente para destruir el Sol, incluso si se lanzara a una velocidad cercana a la velocidad de la luz. Por lo tanto, es probable que el Sol ganara en esta batalla.\n"
      ]
     }
    ],
    "source": [
-    "question = \"Quien ganarian, los leones o el sol?\"\n",
+    "question = \"Quien ganaria, los leones o el sol?\"\n",
     "prompt =f'''Tienes acceso a transcripciones de videos de youtube.\n",
     "            Se te hará una pregunta y debes responder basándote exclusivamente en la información proporcionada en las transcripciones. Si no puedes responder la pregunta utilizando estos datos, indica que la información no está disponible.\n",
     "\n",
